force-app/main/default/objects/TriggerDispatch__mdt/TriggerDispatch__mdt.object-meta.xml
<CustomObject>
    <description>Trigger Dispatcher</description>
    <label>TriggerDispatch</label>
    <pluralLabel>TriggerDispatch</pluralLabel>
</CustomObject>