force-app/main/default/objects/TriggerDispatch__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>apex trigger is active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>