force-app/main/default/objects/TriggerDispatch__mdt/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <description>Apex Trigger Handler Name, full name</description>
    <label>ApexClass</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>