force-app/main/default/objects/TriggerDispatch__mdt/fields/SObjectName__c.field-meta.xml
<CustomField>
    <fullName>SObjectName__c</fullName>
    <description>SObject Name</description>
    <label>SObjectName</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>