force-app/main/default/objects/TriggerDispatch__mdt/listViews/AllTriggerDispatch.listView-meta.xml
<ListView>
    <fullName>AllTriggerDispatch</fullName>
    <columns>Active__c</columns>
    <columns>SObjectName__c</columns>
    <columns>ApexClass__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>Trigger Dispatch</label>
</ListView>